--- a/GroceryAppAPI/appsettings.Development.json
+++ b/GroceryAppAPI/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "AppSettings": {
+    "ConnectionString": {
+      "DefaultConnection": "Server=localhost;Initial Catalog=GroceryAppDB;Persist Security Info=True;User ID=devuser;Password=dev123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
     }
   }
 }
