--- a/GroceryAppAPI/appsettings.json
+++ b/GroceryAppAPI/appsettings.json
@@ -2,6 +2,11 @@
   "AppSettings": {
     "ConnectionString": {
       "DefaultConnection": "Server=localhost;Initial Catalog=GroceryAppDB;Persist Security Info=True;User ID=devuser;Password=dev123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    },
+    "Authentication": {
+      "Key": "MPhasis@123456789!@#$%^&*()_+~`=-,./?><",
+      "Issuer": "http://groceryapp.api.com/",
+      "Audience": "http://groceryapp.api.com/"
     }
   }
 }
